corrected error on club-ethos margin for under 1200px and cover text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ footer {
 #club-ethos {
     width: 65%;
     height: 1200px;
-    margin: 0 auto:
+    margin: 0 auto;
 }
 
 #welcome {
@@ -300,7 +300,6 @@ hr {
         line-height: 25px;
 
     }
-}
 
 #cover-text {
     left: 0;
@@ -334,5 +333,6 @@ hr {
    #photos {
     column-count: 2;
    } 
+}
 }
 
